# ravenxterm

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  configure_github.ps1  mkdocs.yml  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: index.md
docs/api/: model_management.md
docs/getting-started/: installation.md  quickstart.md
model_registry/: __init__.py
src/ravenxterm/: __init__.py  adaptive_selector.py  cli.py  model_manager.py  model_registry.py  user_preferences.py
src/ravenxterm/models/: __init__.py
tests/: test_model_registry.py
