[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ravenxterm"
version = "0.1.0"
description = "A Local-First AI Terminal Extension with seamless integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ryan Montgomery", email = "ryan@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
ravenxterm = "ravenxterm.cli:main"

[project.urls]
Homepage = "https://github.com/devdollzai/ravenxterm"
Repository = "https://github.com/devdollzai/ravenxterm.git"
"Bug Tracker" = "https://github.com/devdollzai/ravenxterm/issues"
Documentation = "https://devdollzai.github.io/ravenxterm"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]
